<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gameapp.android.wizardcounter.PlayerSelection"
    tools:showIn="@layout/activity_player_selection"
    android:id="@+id/Rl">


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number_of_Players"
        android:id="@+id/textView8"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <Button
        android:onClick="minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/button5"
        android:text="-"
        android:textSize="20sp"
        android:layout_below="@+id/textView8"
        android:layout_margin="30sp"/>

    <Button
        android:onClick="plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="20sp"
        android:id="@+id/button6"
        android:layout_marginTop="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="10sp"
        android:layout_below="@id/textView8"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player"
        android:id="@+id/textView9"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"/>

    <EditText
        android:maxLength="5"
        android:id="@+id/inputSearchEditText"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:ellipsize="start"
        android:hint="@string/Player_Name"
        android:inputType="text"
        android:background="@drawable/edittextstyle"
        android:layout_above="@+id/textView10"
        android:layout_alignRight="@+id/inputSearchEditText2"
        android:layout_alignEnd="@+id/inputSearchEditText2"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_2"
        android:id="@+id/textView10"
        android:layout_marginTop="23dp"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:maxLength="5"
        android:id="@+id/inputSearchEditText2"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:ellipsize="start"
        android:hint="@string/Player_Name"
        android:inputType="text"
        android:background="@drawable/edittextstyle"
        android:layout_above="@+id/textView11"
        android:layout_toRightOf="@+id/button5"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_3"
        android:id="@+id/textView11"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp" />

    <EditText
        android:maxLength="5"
        android:id="@+id/inputSearchEditText3"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:ellipsize="start"
        android:hint="@string/Player_Name"
        android:inputType="text"
        android:background="@drawable/edittextstyle"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignLeft="@+id/inputSearchEditText2"
        android:layout_alignStart="@+id/inputSearchEditText2"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <Button
        android:onClick="ContinueOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:id="@+id/Continue_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_4"
        android:id="@+id/textView20"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp"
        android:visibility="invisible"/>

    <EditText
        android:maxLength="5"
        android:id="@+id/inputSearchEditText4"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:ellipsize="start"
        android:hint="@string/Player_Name"
        android:inputType="text"
        android:background="@drawable/edittextstyle"
        android:layout_alignTop="@+id/textView20"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignLeft="@+id/inputSearchEditText3"
        android:layout_alignStart="@+id/inputSearchEditText3"
        android:visibility="invisible"/>

    <TextView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_5"
        android:id="@+id/textView21"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp" />

    <EditText
        android:maxLength="5"
        android:visibility="invisible"
        android:id="@+id/inputSearchEditText5"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:ellipsize="start"
        android:hint="@string/Player_Name"
        android:inputType="text"
        android:background="@drawable/edittextstyle"
        android:layout_alignTop="@+id/textView21"
        android:layout_alignLeft="@+id/inputSearchEditText4"
        android:layout_alignStart="@+id/inputSearchEditText4"
        android:layout_alignRight="@+id/inputSearchEditText4"
        android:layout_alignEnd="@+id/inputSearchEditText4" />


    <TextView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_6"
        android:id="@+id/textView22"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20sp" />

    <EditText
        android:maxLength="5"
        android:visibility="invisible"
        android:id="@+id/inputSearchEditText6"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:ellipsize="start"
        android:hint="@string/Player_Name"
        android:inputType="text"
        android:background="@drawable/edittextstyle"
        android:layout_alignTop="@+id/textView22"
        android:layout_alignLeft="@+id/inputSearchEditText5"
        android:layout_alignStart="@+id/inputSearchEditText5"
        android:layout_alignRight="@+id/inputSearchEditText5"
        android:layout_alignEnd="@+id/inputSearchEditText5" />
</RelativeLayout>
